--- a/research/1. Data_Ingestion.ipynb
+++ b/research/1. Data_Ingestion.ipynb
@@ -78,56 +78,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'CONFIG_FILE_PATH' from 'src.Text_Summarizer.constants' (c:\\Text-Summarizer-NLP\\src\\Text_Summarizer\\constants\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[55], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mText_Summarizer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CONFIG_FILE_PATH, PARAMS_FILE_PATH                                     \u001b[38;5;66;03m# import the file paths stored in 'constants' folder in src\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mText_Summarizer\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories       \u001b[38;5;66;03m# import those util functions \u001b[39;00m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'CONFIG_FILE_PATH' from 'src.Text_Summarizer.constants' (c:\\Text-Summarizer-NLP\\src\\Text_Summarizer\\constants\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.Text_Summarizer.constants import CONFIG_FILE_PATH, PARAMS_FILE_PATH                                     # import the file paths stored in 'constants' folder in src\n",
+    "from src.Text_Summarizer.constants import *                                    # import the file paths stored in 'constants' folder in src\n",
     "from src.Text_Summarizer.utils.common import read_yaml, create_directories       # import those util functions \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'CONFIG_FILE_PATH' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[51], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfigurationManager\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, config_filepath \u001b[38;5;241m=\u001b[39m CONFIG_FILE_PATH, params_filepath \u001b[38;5;241m=\u001b[39m PARAMS_FILE_PATH):\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m read_yaml(config_filepath)\n",
-      "Cell \u001b[1;32mIn[51], line 2\u001b[0m, in \u001b[0;36mConfigurationManager\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mConfigurationManager\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, config_filepath \u001b[38;5;241m=\u001b[39m \u001b[43mCONFIG_FILE_PATH\u001b[49m, params_filepath \u001b[38;5;241m=\u001b[39m PARAMS_FILE_PATH):\n\u001b[0;32m      4\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig \u001b[38;5;241m=\u001b[39m read_yaml(config_filepath)\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams \u001b[38;5;241m=\u001b[39m read_yaml(params_filepath)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'CONFIG_FILE_PATH' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
-    "    def __init__(self, config_filepath = CONFIG_FILE_PATH, params_filepath = PARAMS_FILE_PATH):\n",
-    "\n",
+    "    def __init__(self, config_filepath = \"config/config.yaml\", params_filepath = \"params.yaml\"):\n",
+    "        \n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
-    "        create_directories([self.config.artifacts_root])\n",
+    "        create_directories([self.config.artifacts_root])                   # for 'artifacts_root' in config.yaml file\n",
     "\n",
     "    \n",
     "\n",
-    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "    def get_data_ingestion_config(self) -> DataIngestionConfig:            # as defined in config.yaml, 'data_ingestion'\n",
     "        config = self.config.data_ingestion\n",
     "\n",
     "        create_directories([config.root_dir])\n",
@@ -144,10 +119,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pathlib  # Import the pathlib module\n",
+    "\n",
+    "class ConfigurationManager:\n",
+    "    def __init__(self, config_filepath: pathlib.Path = pathlib.Path(\"config/config.yaml\"), \n",
+    "                 params_filepath: pathlib.Path = pathlib.Path(\"params.yaml\")):\n",
+    "        \n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
+    "        config = self.config.data_ingestion\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_ingestion_config = DataIngestionConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            source_URL=config.source_URL,\n",
+    "            local_data_file=config.local_data_file,\n",
+    "            unzip_dir=config.unzip_dir \n",
+    "        )\n",
+    "\n",
+    "        return data_ingestion_config\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request as request\n",
+    "import zipfile\n",
+    "from src.Text_Summarizer.logging import logger                # import custom logger\n",
+    "from src.Text_Summarizer.utils.common import get_size         # from utils folder import 'get_size' function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataIngestion:\n",
+    "    def __init__(self, config: DataIngestionConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    def download_file(self):\n",
+    "        if not os.path.exists(self.config.local_data_file):\n",
+    "            filename, headers = request.urlretrieve(\n",
+    "                url = self.config.source_URL,\n",
+    "                filename = self.config.local_data_file\n",
+    "            )\n",
+    "            logger.info(f\"{filename} download! with following info: \\n{headers}\")\n",
+    "        else:\n",
+    "            logger.info(f\"File already exists of size: {get_size(Path(self.config.local_data_file))}\")  \n",
+    "\n",
+    "        \n",
+    "    \n",
+    "    def extract_zip_file(self):\n",
+    "        \"\"\"\n",
+    "        zip_file_path: str\n",
+    "        Extracts the zip file into the data directory\n",
+    "        Function returns None\n",
+    "        \"\"\"\n",
+    "        unzip_path = self.config.unzip_dir\n",
+    "        os.makedirs(unzip_path, exist_ok=True)\n",
+    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(unzip_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-17 18:54:56,773: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-07-17 18:54:56,777: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-07-17 18:54:56,781: INFO: common: created directory at: artifacts]\n",
+      "[2024-07-17 18:54:56,782: INFO: common: created directory at: artifacts/data_ingestion]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-07-17 18:55:02,726: INFO: 1434958058: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "Connection: close\n",
+      "Content-Length: 7903594\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: 34D6:9D28E:41C0A9:55FE61:6697C62B\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Wed, 17 Jul 2024 13:25:00 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-bom4731-BOM\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1721222700.615926,VS0,VE705\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: 5412e5715b304526fa569a721e97ad3339e7fad3\n",
+      "Expires: Wed, 17 Jul 2024 13:30:00 GMT\n",
+      "Source-Age: 0\n",
+      "\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_ingestion_config = config.get_data_ingestion_config()\n",
+    "    data_ingestion = DataIngestion(config=data_ingestion_config)\n",
+    "    data_ingestion.download_file()\n",
+    "    data_ingestion.extract_zip_file()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   },
   {
    "cell_type": "code",
